<resources>
    <string name="app_name">ThoughtBattle</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="update_name">Update Name</string>
    <string name="logout">Logout</string>
    <string name="ThoughtBattle" />
    <string name="sb_text_report">Report Message</string>
    <string name="sb_text_report_message">Select Report Category</string>
    <string name="sb_text_report_success">Report submitted successfully</string>
    <string name="sb_text_report_failed">Failed to submit report</string>
    <string-array name="report_categories">
        <item>Suspicious</item>
        <item>Harassing</item>
        <item>Spam</item>
        <item>Inappropriate</item>
    </string-array>
    <string name="text_report">Report</string>
    <string name="text_title_moderation">Moderation Feature Customization</string>
    <string name="text_title_moderation_group_channel">Moderation feature for Group Channel</string>
    <string name="text_title_moderation_open_channel">Moderation feature for Open Channel</string>
    <string name="text_report_suspicious">Suspicious</string>
    <string name="text_report_harassing">Harassing</string>
    <string name="text_report_spam">Spam</string>
    <string name="text_report_inappropriate">Inappropriate</string>
    <string name="text_report_error">Couldn\&#39;t report message.</string>
    <string name="text_choose_report_category_dialog">Choose the report category</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_active_description"> Recently Active Debates! </string>
    <string name="text_new_description"> Recently Created Debates! </string>
    <string name="text_active"> Active Debates </string>
    <string name="text_new"> New Debates </string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="side_b_cannot_be_empty">Please Declare a title for Side B</string>
    <string name="side_a_cannot_be_empty">Please declare a title for side A</string>
    <string name="title_cannot_be_empty">Please declare title for debate</string>
    <string name="submit">submit</string>
    <string name="ex_oranges">Ex. Oranges</string>
    <string name="side_b">Side B</string>
    <string name="ex_apples">Ex. Apples</string>
    <string name="side_a">Side A</string>
    <string name="declare_your_sides">Declare your sides!</string>
    <string name="ex_apples_vs_oranges">Ex. Apples vs Oranges</string>
    <string name="title_your_debate">Title your Debate</string>
    <string name="create_a_debate">Create a Debate</string>
    <string name="back_button">back button</string>
    <string name="info_button">information</string>
    <string name="topic_arts">Arts</string>
    <string name="topic_politics">Politics</string>
    <string name="topic_sports">Sports</string>
    <string name="topic_pop_culture">Pop Culture</string>
    <string name="topic_health">Health</string>
    <string name="topic_technology">Technology</string>
    <string name="topic_education">Education</string>
    <string name="topic_history">History</string>
    <string name="topic_conspiracy">Conspiracy</string>
 <string name="topic_media">Media(Film,Books,Television,etc)</string>
    <string name="topic_religion">Religion</string>
    <string name="topic_science">Science</string>
    <string name="topic_entertainment">Entertainment</string>
    <string name="topic_Social">Social</string>
    <string name="topic_other">Other</string>
    <string name="topic_social">Social</string>
    <string name="topic_finance">Finance</string>
    <string name="topic_environment">Environment</string>
    <string name="topic_gaming">Gaming</string>
    <string name="topic_film_books">Film and Books</string>
    <string name="all">All</string>
    <string name="submit_button">Submit button</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="message">Message</string>
    <string name="following">following</string>
    <string name="debates">Debates</string>
    <string name="display_name">Display Name</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="display_name_required">Dislay Name Required</string>
    <string name="image_upload_failed">Image Upload Failed</string>
    <string name="ai_recommendations">Recommendations</string>
    <string name="debate_history">Debate History\n</string>
    <string name="no_debates_joined">No Debates Joined</string>
    <string name="save_changes">Save Changes</string>
    <string name="debate_topic_cannot_be_empty">Please choose a topic</string>

</resources>