<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/purple_500"
        android:visibility="gone"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup


            android:id="@+id/debateTopics"
            android:layout_width="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:singleLine="true"
            app:checkedChip="@id/chipAll"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sideBEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/debateSubmitButton">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                app:chipBackgroundColor="@color/selector_form_chip_background_light"
                app:checkedIconEnabled="false"/>


            <com.google.android.material.chip.Chip
                android:id="@+id/chipArts"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_arts"
                app:chipBackgroundColor="@color/selector_form_chip_background_light"
                app:checkedIconEnabled="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPolitics"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_politics"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSports"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_sports"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPopCulture"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_pop_culture"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHealth"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_health"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTechnology"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_technology"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEducation"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_education"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipHistory"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_history"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipConspiracy"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_conspiracy"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipMedia"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_media"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipReligion"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_religion"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipScience"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_science"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEntertainment"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_entertainment"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipSocial"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_social"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chipFinance"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_finance"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEnvironment"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_environment"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGaming"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_gaming"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilmBooks"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_film_books"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOther"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_other"/>









        </com.google.android.material.chip.ChipGroup>



    </HorizontalScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_group_channels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>