<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.createDebate.CreateDebateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/create_a_debate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/debateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_your_debate"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_apples_vs_oranges"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/debateTitle" />

        <TextView
            android:id="@+id/declareSides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/declare_your_sides"
            app:layout_constraintTop_toBottomOf="@id/titleET" />

        <TextView
            android:id="@+id/sideATitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/side_a"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/declareSides" />

        <EditText
            android:id="@+id/sideAEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_apples"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/sideATitle" />

        <TextView
            android:id="@+id/sideBTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/side_b"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sideAEditText" />

        <EditText
            android:id="@+id/sideBEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_oranges"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/sideBTitle" />

        <Button
            android:id="@+id/debateSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sideBEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>